--- a/.gitignore
+++ b/.gitignore
@@ -295,8 +295,8 @@ paket-files/
 .cr/
 
 # Python Tools for Visual Studio (PTVS)
-__pycache__/
-*.pyc
+#__pycache__/
+#*.pyc
 
 # Cake - Uncomment if you are using it
 # tools/**
